# rijndael-256-tches

./: .gitignore  LICENSE  README.md
aarch64/: Makefile  Makefile.rpi4  Makefile.rpi5  aes_baseline_arm.c  aes_baseline_arm.h  bench_dit.c  rijndael256_folded_arm.c  rijndael256_keyschedule.c  rijndael256_ref.c  rijndael256_ttable.c
aarch64/benchmark/: benchmark.c
aarch64/platform/apple/: rijndael256_arm.S  rijndael256_neon.S  rijndael256_neon_interleaved.S
aarch64/platform/linux_aarch64/: rijndael256_arm.S  rijndael256_arm_stub.c  rijndael256_neon.S  rijndael256_neon_interleaved.S
aarch64/test/: test_main.c
benchmark_pqc/: INTEGRATION_STATUS.md  bench_pqc_sign.c  run_all_benchmarks.sh  run_benchmarks.sh  run_final_benchmarks.sh  run_folded_vs_eor.sh  verify_folded_identity.sh
benchmark_pqc/folded_integration/: README.md  apply_folded_integration.sh  folded_vs_eor_block.c  pack_folded_integration.sh
benchmark_pqc/folded_integration/tree/MQOM/Reference_Implementation/mqom2_cat3_gf256_fast_r3/: Makefile
benchmark_pqc/folded_integration/tree/MQOM/Reference_Implementation/mqom2_cat3_gf256_fast_r3/rijndael/: rijndael256_folded_arm.c  rijndael_arm.c
benchmark_pqc/folded_integration/tree/MQOM/Reference_Implementation/mqom2_cat5_gf256_fast_r3/rijndael/: rijndael256_folded_arm.h  rijndael_arm.h
benchmark_pqc/folded_integration/tree/Mirath/Reference_Implementation/mirath_tcith/mirath_tcith_3a_fast/: Makefile
benchmark_pqc/folded_integration/tree/Mirath/Reference_Implementation/mirath_tcith/mirath_tcith_3a_fast/common/rijndael/: rijndael_arm.h
benchmark_pqc/folded_integration/tree/Mirath/Reference_Implementation/mirath_tcith/mirath_tcith_5a_fast/: Makefile
benchmark_pqc/folded_integration/tree/RYDE/Reference_Implementation/ryde3f/: Makefile
benchmark_pqc/folded_integration/tree/RYDE/Reference_Implementation/ryde3f/src/: rijndael256_folded_arm.h  seed_expand_functions_arm.h
benchmark_pqc/folded_integration/tree/RYDE/Reference_Implementation/ryde5f/: Makefile
benchmark_pqc/folded_integration/tree/RYDE/Reference_Implementation/ryde5f/src/: rijndael_arm.h
benchmark_pqc/folded_integration/tree/SDitH/Reference_Implementation/sdith_cat3_fast/: CMakeLists.txt
benchmark_pqc/folded_integration/tree/SDitH/Reference_Implementation/sdith_cat3_fast/lib/aes/: CMakeLists.txt  rijndael256_ctrle_special_arm.c
benchmark_pqc/folded_integration/tree/SDitH/Reference_Implementation/sdith_cat5_fast/: CMakeLists.txt
benchmark_pqc/folded_integration/tree/SDitH/Reference_Implementation/sdith_cat5_fast/lib/aes/: rijndael256_arm_wrapper.c
benchmark_pqc/results/: benchmark_20260624_141142.csv  benchmark_summary.md  final_benchmark_20260321_150256.txt  final_benchmark_20260321_150352.txt  folded_vs_eor_SUMMARY.md  folded_vs_eor_identity_20260624_143709.txt  ryde_neon_2026-06-18.txt
common/: rijndael256.h  rijndael256_tables.h  test_vectors.h
cortexm4/bitslice/: rijndael256.h  rijndael256_decrypt.s  rijndael256_decrypt_ref.c  rijndael256_encrypt.s  rijndael256_keysched.c  verify_host.c
cortexm4/bitslice/board_test/: Makefile  main.c  parse_result.py
cortexm4/board_setup/: linker.ld  startup.c
cortexm4/fixslice/: rijndael256.h  rijndael256_encrypt.s  rijndael256_keysched.c
cortexm4/fixslice/board_test/: Makefile  main.c  parse_result.py
cortexm4/native/: Makefile  rijndael256_native.c  rijndael256_native.h  rijndael256_sbox.h  verify_host.c
cortexm4/native/board_test/: Makefile  main.c  parse_result.py
cortexm4/ttable/: Makefile  rijndael256_tables.h  rijndael256_ttable.c  rijndael256_ttable.h  verify_host.c
cortexm4/ttable/board_test/: Makefile  main.c  parse_result.py
cortexm4/ttable_asm/: Makefile  rijndael256_encrypt.s  rijndael256_impl.c  rijndael256_ttable_asm.h  verify_host.c
cortexm4/ttable_asm/board_test/: Makefile  main.c  parse_result.py
cuda/: CMakeLists.txt
cuda/benchmark/: benchmark_common.h  benchmark_ctr.cu  benchmark_ecb.cu  benchmark_es.cu
cuda/cpu/: rijndael.c
cuda/cuda/: rijndael_ctr.cu  rijndael_cuda_tables.cu  rijndael_ecb.cu  rijndael_es.cu
cuda/include/: rijndael.h  rijndael_ctr.cuh  rijndael_cuda_core.cuh  rijndael_cuda_tables.cuh  rijndael_ecb.cuh  rijndael_es.cuh
cuda/profile/: profile_ecb.cu  run_ncu_profile.sh
cuda/scripts/: check_gpu.cu  run_benchmarks.sh
cuda/test/: test-vectors.h  test_ctr.cu  test_ecb.cu  test_es.cu  test_utils.h
docs/: ARTIFACT_README.md  benchmark_results.md  neon_performance_analysis.md
docs/results/: apple_m2_2026-03-18.csv  apple_m2_2026-03-18_env.txt  apple_m2_2026-06-18.csv  apple_m2_2026-06-18_env.txt  apple_m2_2026-06-18_run.txt  apple_m2_dit_2026-06-18.csv  apple_m2_dit_2026-06-18_env.txt  apple_m2_throughput_2026-06-18.csv  cortexm4_2026-03-17.csv  cortexm4_2026-03-17_env.txt  cortexm4_rom_stack_2026-04-14.txt  rpi4_2026-03-18.csv  rpi4_2026-03-18_env.txt  rpi5_a76_2026-06-19.csv  rpi5_a76_2026-06-19_env.txt  rpi5_a76_2026-06-19_run.txt  rpi5_a76_throughput_2026-06-19.csv  x86_i7-1165g7_2026-06-18.csv  x86_i7-1165g7_2026-06-18_env.txt
docs/results/cuda_rtx4080/: benchmark_ctr.txt  benchmark_ctr_naive.txt  benchmark_ecb.txt  benchmark_ecb_naive.txt  benchmark_es.txt  benchmark_staggered.txt  check_gpu.txt  ctr.csv  ctr_naive.csv  ctr_staggered.csv  ecb.csv  ecb_naive.csv  ecb_staggered.csv  es.csv
docs/results/cuda_rtx4080/ncu/: ncu_focused_metrics.txt  ncu_results.txt  ncu_results_v2_staggered.txt  ncu_summary.csv
x86/: Makefile  README.md  rijndael256_aesni.c  rijndael256_vaes512.c
x86/benchmark/: benchmark.c  benchmark_vaes.c
x86/results/: README.md  x86_i7-13700kf_2026-06-18.csv  x86_i7-13700kf_2026-06-18.txt
x86/test/: test_kat.c  test_kat_vaes.c
